h1. CHANGELOG

h2. 0.1.3 September 20, 2013

* add missing escape sequence to ERB delimiters

h2. 0.1.2 September 20, 2013

* add simple layout files
* add missing turbolinks attributes

h2. 0.1.1 September 19, 2013

* add navigation links for 'About' or 'Contact' if view files exist in expected locations

h2. 0.1.0 September 19, 2013

* support for Twitter Bootstrap 2.3