@@ -12,9 +12,9 @@
     <div id="container">
       <header>
         <%%= render 'layouts/navigation' %>
-        <%%= render 'layouts/messages' %>
       </header>
       <main role="main">
+        <%%= render 'layouts/messages' %>
         <%%= yield %>
       </main>
       <footer>
