@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 0.1.4 September 20, 2013
+
+* add simple stylesheet if there is no front-end framework
+
 h2. 0.1.3 September 20, 2013
 
 * add missing escape sequence to ERB delimiters
